# plasp

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  KNOWN-ISSUES.md  LICENSE  LICENSE.md  README.md  meson.build
app/: CMakeLists.txt  main.cpp
app/include/plasp-app/: Command.h  CommandType.h  Commands.h  CommonOptions.h  OptionGroups.h  Utils.h  Version.h
app/include/plasp-app/commands/: CommandBeautify.h  CommandCheckSyntax.h  CommandHelp.h  CommandNormalize.h  CommandTranslate.h  CommandVersion.h  Translate.h
app/src/: CMakeLists.txt  main.cpp
app/src/plasp-app/: Commands.cpp  CommonOptions.cpp  OptionGroups.cpp  main.cpp
app/src/plasp-app/commands/: CommandBeautify.cpp  CommandCheckSyntax.cpp  CommandHelp.cpp  CommandNormalize.cpp  CommandTranslate.cpp  CommandVersion.cpp  Translate.cpp
apps/plasp-app/: CMakeLists.txt  main.cpp
lib/colorlog/: CMakeLists.txt  meson.build
lib/colorlog/include/colorlog/: ColorStream.h  Formatting.h  Logger.h  Priority.h
lib/colorlog/src/: CMakeLists.txt
lib/colorlog/src/colorlog/: Logger.cpp
lib/parsebase/src/: CMakeLists.txt
lib/parsebase/src/parsebase/: Stream.cpp
lib/pddl/: CMakeLists.txt  meson.build
lib/pddl/include/pddl/: AST.h  ASTForward.h  ASTOutput.h  Context.h  Exception.h  Mode.h  Normalize.h  NormalizedAST.h  NormalizedASTForward.h  NormalizedASTOutput.h  Parse.h  Tokenizer.h  Variant.h
lib/pddl/include/pddl/detail/: ASTContext.h  ASTCopy.h  OutputUtils.h  Requirements.h  SignatureMatching.h  VariableStack.h
lib/pddl/include/pddl/detail/normalization/: Action.h  AtomicFormula.h  CollectFreeVariables.h  ConditionalEffect.h  Description.h  Domain.h  Effect.h  Fact.h  InitialState.h  Literal.h  NormalizationContext.h  Precondition.h  Problem.h  Reduction.h
lib/pddl/include/pddl/detail/parsing/: Action.h  AtomicFormula.h  Constant.h  ConstantDeclaration.h  Description.h  Domain.h  Effect.h  Expressions.h  Fact.h  InitialState.h  Parser.h  Precondition.h  Predicate.h  PredicateDeclaration.h  PrimitiveType.h  PrimitiveTypeDeclaration.h  Problem.h  Requirement.h  Term.h  Type.h  Unsupported.h  Utils.h  Variable.h  VariableDeclaration.h
lib/pddl/src/: CMakeLists.txt
lib/pddl/src/pddl/: Parse.cpp
lib/pddl/src/pddl/detail/: Requirements.cpp  SignatureMatching.cpp  VariableStack.cpp
lib/pddl/src/pddl/detail/normalization/: Action.cpp  AtomicFormula.cpp  ConditionalEffect.cpp  Description.cpp  Domain.cpp  (+7 more)
lib/pddl/tests/: CMakeLists.txt  TestAcceptanceOfOfficialPDDLInstances.cpp  TestIssues.cpp  TestNormalization.cpp  TestOfficialPDDLInstances.cpp  TestParser.cpp  TestParserBasics.cpp  TestParserCorrectness.cpp  TestParserSuccess.cpp  TestSignatureMatching.cpp
lib/pddlparse/src/: CMakeLists.txt
lib/pddlparse/src/pddlparse/: Parse.cpp
lib/pddlparse/src/pddlparse/detail/: Requirements.cpp  SignatureMatching.cpp  VariableStack.cpp
lib/pddlparse/tests/: CMakeLists.txt  TestAcceptanceOfOfficialPDDLInstances.cpp  TestIPCDomains.cpp  TestIssues.cpp  TestOfficialPDDLInstances.cpp  TestParser.cpp  TestSignatureMatching.cpp  main.cpp
lib/tokenize/: CMakeLists.txt  meson.build
lib/tokenize/include/tokenize/: Location.h  Stream.h  StreamPosition.h  Tokenizer.h  TokenizerException.h  TokenizerPolicy.h
lib/tokenize/src/: CMakeLists.txt
lib/tokenize/src/tokenize/: Location.cpp  Stream.cpp
lib/tokenize/tests/: CMakeLists.txt  TestTokenizer.cpp
src/: CMakeLists.txt
src/plasp/: Language.cpp
src/plasp/input/: Stream.cpp
src/plasp/output/: Logger.cpp
src/plasp/pddl/: Action.cpp  Constant.cpp  Description.cpp  Domain.cpp  EitherType.cpp  Expression.cpp  ExpressionContext.cpp  InitialState.cpp  Predicate.cpp  PrimitiveType.cpp  Problem.cpp  Requirement.cpp  TranslatorASP.cpp  Type.cpp  TypePrimitive.cpp  Variable.cpp  VariableStack.cpp
src/plasp/pddl/expressions/: And.cpp  AndExpression.cpp  At.cpp  Binary.cpp  Constant.cpp  DerivedPredicate.cpp  Dummy.cpp  Either.cpp  Exists.cpp  ForAll.cpp  Imply.cpp  InitialState.cpp  NAry.cpp  NAryExpression.cpp  Not.cpp  NotExpression.cpp  Or.cpp  OrExpression.cpp  Predicate.cpp  PredicateDeclaration.cpp  PredicateExpression.cpp  PrimitiveType.cpp  Type.cpp  Unsupported.cpp  Variable.cpp  VariableExpression.cpp  When.cpp
src/plasp/sas/: AssignedVariable.cpp  AxiomRule.cpp  Debugging.cpp  Description.cpp  Effect.cpp  Goal.cpp  InitialState.cpp  MutexGroup.cpp  Operator.cpp  Predicate.cpp  TranslatorASP.cpp  Value.cpp  Variable.cpp  VariableTransition.cpp
src/plasp/utils/: Logger.cpp  Parser.cpp  Stream.cpp
tests/: CMakeLists.txt  NullOutputStream.h  TestPDDLNormalization.cpp  TestPDDLParser.cpp  TestPDDLTranslation.cpp  TestSASParser.cpp  TestUtils.cpp
tests/data/: blocksworld-domain.pddl  blocksworld.sas  cavediving.sas  freecell.sas  philosophers.sas  storage-domain.pddl  storage-problem.pddl  woodworking-domain.pddl
tests/data/issues/: issue-1.pddl  issue-10.pddl  issue-11.pddl  issue-2.pddl  issue-3.pddl  issue-4.pddl  issue-6.sas  issue-7.pddl  issue-8.pddl  issue-9.pddl
tests/data/normalization/: normalization-1.pddl  normalization-2.pddl  normalization-3.pddl  normalization-4.pddl  normalization-5.pddl  normalization-6-1.pddl  normalization-6-2.pddl  normalization-6-3.pddl
tests/data/pddl-syntax/: domain-expression-name-1.pddl  domain-expression-name-2.pddl  domain-expression-name-3.pddl  domain-expressions-1.pddl  domain-expressions-2.pddl  domain-expressions-3.pddl  domain-parentheses-1.pddl  domain-parentheses-2.pddl  domain-parentheses-3.pddl  domain-parentheses-4.pddl  domain-parentheses-5.pddl  domain-parentheses-6.pddl  domain-parentheses-7.pddl  domain-parentheses-8.pddl  domain-section-name-1.pddl  domain-section-name-2.pddl  domain-section-name-3.pddl  domain-section-name-4.pddl  domain-section-name-5.pddl  domain-section-name-6.pddl  domain-section-name-7.pddl  domain-types-1.pddl  domain-types-2.pddl  domain-types-3.pddl  domain-types-4.pddl  domain-valid.pddl  domain-variables-1.pddl  domain-variables-2.pddl  domain-variables-3.pddl
tests/data/test-cases/: skeleton.pddl  typing-1.pddl
(+320 files in other folders)
